syntax = "proto3";

package main;

option go_package = "./proto";

// 删除系统登录日志表
message DeleteLoginLogReq {
  repeated int64 ids = 1;
}

message DeleteLoginLogResp {
  string pong = 1;
}
// 查询系统登录日志表详情
message QueryLoginLogDetailReq {
  int64 id = 1;
}

message QueryLoginLogDetailResp {
  int64 id = 1; //编号
  string user_name = 2; //用户名
  string login_status = 3; //登录状态
  string ip_address = 4; //IP地址
  string browser = 5; //浏览器
  string os = 6; //操作系统
  string error_msg = 7; //登录失败信息
  string login_time = 8; //登录时间

}

// 分页查询系统登录日志表列表
message QueryLoginLogListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string browser = 5; //浏览器
  string ip_address = 3; //IP地址
  string login_status = 4; //登录状态
  string os = 6; //操作系统
  string user_name = 7; //用户名

}

message LoginLogListData {
  int64 id = 1; //编号
  string user_name = 2; //用户名
  string login_status = 3; //登录状态
  string ip_address = 4; //IP地址
  string browser = 5; //浏览器
  string os = 6; //操作系统
  string error_msg = 7; //登录失败信息
  string login_time = 8; //登录时间
}

message QueryLoginLogListResp {
  int64 total = 1;
  repeated  LoginLogListData list = 2;
}

// 系统登录日志表
service LoginLogService {
  // 删除系统登录日志表
  rpc DeleteLoginLog(DeleteLoginLogReq) returns (DeleteLoginLogResp){}
  // 查询系统登录日志表详情
  rpc QueryLoginLogDetail(QueryLoginLogDetailReq) returns (QueryLoginLogDetailResp){}
  // 查询系统登录日志表列表
  rpc QueryLoginLogList(QueryLoginLogListReq) returns (QueryLoginLogListResp){}


}
